<resources>
    <string name="app_name" translatable="false">MP3Tagger</string>
    <string name="action_settings">Settings</string>
    <string name="no_data">No Data</string>
    <string name="edit">Edit</string>
    <string name="convert">Filename to Tag</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save changes</string>
    <string name="browse">Browse</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="track">Track</string>
    <string name="cover">Cover</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_convert">Filename to Tag</string>
    <string name="convert_description">Select from the filename and click on the buttons below to assign the desired tag.</string>
    <string name="path">Path: </string>
    <string name="multiple_selected">Multiple Selection</string>
    <string name="access_denied_message">Access denied!</string>
    <string name="preview">Preview</string>
    <string name="saved">Saved</string>
    <string name="converted">Converted</string>
    <string name="empty">Empty</string>
    <string name="clear_selection">Clear selection</string>
    <string name="invalid_value">Invalid value!</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="warning">Warning</string>
    <string name="read_warning">Many files have been detected. This process may take a while.</string>
</resources>