<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.mp3tagger.ConvertActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/convert_convert"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/convert_path"
                android:textStyle="bold"
                android:textColor="@color/accent_material_light"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/preview"
                android:id="@+id/convert_preview"
                android:background="@color/accent_material_dark"
                android:gravity="center_horizontal"
                android:layout_below="@+id/convert_description"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/convert_split"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/convert_preview">
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/track"
                    android:id="@+id/convert_track"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/title"
                    android:id="@+id/convert_title"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/album"
                    android:id="@+id/convert_album"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/artist"
                    android:id="@+id/convert_artist"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/year"
                    android:id="@+id/convert_year"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/genre"
                    android:id="@+id/convert_genre"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/comment"
                    android:id="@+id/convert_comment"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/convert_description"
                android:id="@+id/convert_description"
                android:layout_below="@+id/convert_path"
                android:layout_alignParentStart="true"
                android:textStyle="italic" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/convert_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_button"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/convert" />

    <Button
        android:id="@+id/convert_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_button"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:layout_toEndOf="@+id/convert_convert"
        android:text="@string/cancel" />

</RelativeLayout>
